--- a/images2/index.html
+++ b/images2/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Моя веб-сторінка</title>
 </head>
 <body>
@@ -11,3 +12,4 @@
     <img src="images/image4.jpg" alt="Опис четвертої картинки">
 </body>
 </html>
+
